#
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# Tools for tracking privacy budget.

load("@accounting_py_pip_deps//:requirements.bzl", "requirement")

package(default_visibility = [
    "//visibility:public",
])

licenses(["notice"])

py_library(
    name = "privacy_loss_distribution",
    srcs = [
        "privacy_loss_distribution.py",
    ],
    srcs_version = "PY3",
    deps = [
        ":privacy_loss_mechanism",
        requirement("numpy"),
        requirement("scipy"),
    ],
)

py_test(
    name = "privacy_loss_distribution_test",
    size = "small",
    srcs = ["privacy_loss_distribution_test.py"],
    python_version = "PY3",
    deps = [
        ":privacy_loss_distribution",
        ":privacy_loss_mechanism",
        ":test_util",
        requirement("absl-py"),
        requirement("scipy"),
    ],
)

py_library(
    name = "privacy_loss_mechanism",
    srcs = [
        "privacy_loss_mechanism.py",
    ],
    srcs_version = "PY3",
    deps = [
        requirement("numpy"),
        requirement("scipy"),
        requirement("dataclasses"),
    ],
)

py_test(
    name = "privacy_loss_mechanism_test",
    size = "small",
    srcs = ["privacy_loss_mechanism_test.py"],
    python_version = "PY3",
    deps = [
        ":privacy_loss_mechanism",
        ":test_util",
        requirement("absl-py"),
        requirement("scipy"),
    ],
)

py_library(
    name = "accountant",
    srcs = [
        "accountant.py",
    ],
    srcs_version = "PY3",
    deps = [
        ":privacy_loss_distribution",
        ":privacy_loss_mechanism",
        requirement("dataclasses"),
    ],
)

py_test(
    name = "accountant_test",
    size = "small",
    srcs = ["accountant_test.py"],
    python_version = "PY3",
    deps = [
        ":accountant",
        ":privacy_loss_mechanism",
        requirement("absl-py"),
    ],
)

py_library(
    name = "test_util",
    srcs = [
        "test_util.py",
    ],
    srcs_version = "PY3",
)

py_binary(
    name = "privacy_loss_distribution_basic_example",
    srcs = [
        "privacy_loss_distribution_basic_example.py",
    ],
    python_version = "PY3",
    deps = [
        ":privacy_loss_distribution",
        requirement("absl-py"),
    ],
)
